[gd_scene load_steps=5 format=3 uid="uid://criis4an0x8if"]

[ext_resource type="Script" path="res://matchmaking_menu.gd" id="1_aq0ub"]
[ext_resource type="PackedScene" uid="uid://b18lkbyalwby" path="res://loading.tscn" id="3_h8d18"]
[ext_resource type="PackedScene" uid="uid://c3uo54o4oulo5" path="res://waiting_for_connect.tscn" id="3_y67g8"]
[ext_resource type="PackedScene" uid="uid://c64uvbsdkg86h" path="res://failed_to_load.tscn" id="5_mvvjd"]

[node name="Matchmaking Menu" type="CanvasLayer"]
script = ExtResource("1_aq0ub")
next_scene = ExtResource("3_y67g8")
loading_scene = ExtResource("3_h8d18")
failed_loading_lobby_scene = ExtResource("5_mvvjd")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Vbox" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/Vbox"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/Vbox/PanelContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Vbox/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Lobby" type="Label" parent="PanelContainer/MarginContainer/Vbox/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="LineEdit" parent="PanelContainer/MarginContainer/Vbox/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Server" type="Button" parent="PanelContainer/MarginContainer/Vbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Start Lobby
"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/Vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Vbox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/Vbox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Lobby" type="Label" parent="PanelContainer/MarginContainer/Vbox/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Lobby:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IP" type="LineEdit" parent="PanelContainer/MarginContainer/Vbox/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="Join" type="Button" parent="PanelContainer/MarginContainer/Vbox/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_font_sizes/font_size = 30
text = "Join Lobby
"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/Vbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"BackButton"
theme_override_font_sizes/font_size = 30
text = "Back"

[connection signal="button_down" from="PanelContainer/MarginContainer/Vbox/Server" to="." method="_on_server_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/Vbox/MarginContainer/VBoxContainer/Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/Vbox/Back" to="." method="_on_back_button_down"]
